--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,11 +1,19 @@
 html {
-    --primaryColor: aquamarine;
+    --primaryColor: cadetblue;
+    background-color: papayawhip;
+    color: antiquewhite;
+    text-shadow: 2px 2px 3px black;
+    font-size: small;
+    font-family: 'Days One', sans-serif;
 } body {
     margin: 0;
 }
 
 ul {
     list-style-type: none;
+    padding: 0px;
+} li {
+    padding: 10px;
 }
 
 header {
@@ -22,28 +30,75 @@ header {
 main {
     display: flex;
     text-align: center;
-    align-items: center;
 } .forecastContainer {
     display: flex;
     width: 75%;
     flex-wrap: wrap;
-    padding: 25px;
+    padding: 25px 25px 0px 25px;
 } .crrntFrCstContainer {
     width: 100%;
     background-color: var(--primaryColor);
+    border-radius: 10px;
 } .fiveDay4castContainer {
     width: 100%;
 } .searchHistoryContainer {
-    width: 25%;
-    background-color: var(--primaryColor);
+    display: flex;
+    flex: 1 1 25%;
+    justify-content: center;
+    padding: 25px 25px 0px 25px;
 }
 
 .fiveDay4cast {
     display: flex;
+    flex-wrap: wrap;
     gap: 25px;
     padding: 0;
     justify-content: center;
-} .fiveDay4cast li {
+} .fiveDay4cast > li {
     background-color: var(--primaryColor);
+    border-radius: 10px;
     padding: 25px;
+    flex: 1 1 15%;
+} .historyBox {
+    background-color: var(--primaryColor);
+    border-radius: 10px;
+    width: 100%;
 }
+
+img.crrntIcon {
+    position: absolute;
+    left: 10%;
+    transform: scale(3.0);
+}
+
+input#SearchBox {
+    border-radius: 10px;
+    margin: 5px;
+    width: 60%;
+} input[type="submit"] {
+    border-radius: 10px;
+}
+
+.prevSearch:hover {
+    transform-origin: right;
+    transform: scale(1.3);
+    cursor: pointer;
+}
+
+input[type=submit]:hover{
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    html {
+        font-size: smaller;
+    }
+  } @media (max-width: 500px) {
+    html {
+        font-size: x-small;
+    }
+  } @media (max-width: 375px) {
+    html {
+        font-size: xx-small;
+    }
+  }
